kubernetes/apps/seerr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr
  namespace: seerr
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`requests.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: seerr
          port: 5055
  tls: {}
